force-app/main/default/objects/VoiceTransaction__c/VoiceTransaction__c.object-meta.xml
<CustomObject>
    <label>Voice Transaction</label>
    <nameField>
        <displayFormat>VTX-{000000}</displayFormat>
        <label>VoiceRequest Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>