force-app/main/default/objects/VoiceTransaction__c/fields/Application_Alias__c.field-meta.xml
<CustomField>
    <fullName>Application_Alias__c</fullName>
    <description>Name to display for the Application Id field</description>
    <label>Application Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>