force-app/main/default/objects/VoiceTransaction__c/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>