force-app/main/default/objects/VoiceTransaction__c/fields/Audio__c.field-meta.xml
<CustomField>
    <fullName>Audio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Device supports the audio player interface</description>
    <label>Audio</label>
    <type>Checkbox</type>
</CustomField>