force-app/main/default/objects/VoiceTransaction__c/fields/Device_Alias__c.field-meta.xml
<CustomField>
    <fullName>Device_Alias__c</fullName>
    <description>Name to display for Device Id field</description>
    <label>Device Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>