force-app/main/default/objects/VoiceTransaction__c/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <description>The Id of the device</description>
    <label>Device Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>