force-app/main/default/objects/VoiceTransaction__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Device supports the display interface</description>
    <label>Display</label>
    <type>Checkbox</type>
</CustomField>