force-app/main/default/objects/VoiceTransaction__c/fields/HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Method__c</fullName>
    <label>HTTP Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>