force-app/main/default/objects/VoiceTransaction__c/fields/Intent_Name__c.field-meta.xml
<CustomField>
    <fullName>Intent_Name__c</fullName>
    <description>Name of the intent for the transaction</description>
    <label>Intent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>