force-app/main/default/objects/VoiceTransaction__c/fields/Proxied_URL__c.field-meta.xml
<CustomField>
    <fullName>Proxied_URL__c</fullName>
    <description>The actual URL being called by the proxy</description>
    <label>Proxied URL</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>