force-app/main/default/objects/VoiceTransaction__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <label>Request URL</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>