force-app/main/default/objects/VoiceTransaction__c/fields/Slot_Values__c.field-meta.xml
<CustomField>
    <fullName>Slot_Values__c</fullName>
    <description>The key=value pairs for slots</description>
    <label>Slot Values</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>