force-app/main/default/objects/VoiceTransaction__c/fields/Speaker_Alias__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Alias__c</fullName>
    <description>Name to display for Speaker Id field</description>
    <label>Speaker Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>