force-app/main/default/objects/VoiceTransaction__c/fields/Speaker_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Confidence__c</fullName>
    <description>The confidence level for the speaker Id</description>
    <label>Speaker Confidence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>