force-app/main/default/objects/VoiceTransaction__c/fields/Speaker_Id__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Id__c</fullName>
    <description>The remote speaker Id</description>
    <label>Speaker Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>