force-app/main/default/objects/VoiceTransaction__c/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <description>The URI that is being proxied</description>
    <label>URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>