force-app/main/default/objects/VoiceTransaction__c/fields/User_Alias__c.field-meta.xml
<CustomField>
    <fullName>User_Alias__c</fullName>
    <description>User name to display for User_Id field</description>
    <label>User Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>