force-app/main/default/objects/VoiceTransaction__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>The remote user Id</description>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>