force-app/main/default/objects/VoiceTransaction__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Device supports video</description>
    <label>Video</label>
    <type>Checkbox</type>
</CustomField>